[gd_scene load_steps=3 format=1]

[ext_resource path="res://Options/Options.gd" type="Script" id=1]
[ext_resource path="res://misc/WindowResizer.tscn" type="PackedScene" id=2]

[node name="Options" type="WindowDialog"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 160.0
margin/top = 96.0
margin/right = 448.0
margin/bottom = 448.0
popup/exclusive = false
window/title = "Options"
script/script = ExtResource( 1 )

[node name="frame" type="VBoxContainer" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
alignment = 0

[node name="Tab" type="TabContainer" parent="frame"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 288.0
margin/bottom = 328.0
tab_align = 1
tabs_visible = true

[node name="Display" type="ScrollContainer" parent="frame/Tab"]

editor/display_folded = true
visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 32.0
margin/right = 4.0
margin/bottom = 4.0
scroll/horizontal = false
scroll/vertical = true

[node name="box" type="VBoxContainer" parent="frame/Tab/Display"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 280.0
margin/bottom = 119.0
alignment = 0

[node name="HSeparator" type="HSeparator" parent="frame/Tab/Display/box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 280.0
margin/bottom = 3.0

[node name="box" type="HBoxContainer" parent="frame/Tab/Display/box"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 7.0
margin/right = 280.0
margin/bottom = 27.0
alignment = 0

[node name="Label" type="Label" parent="frame/Tab/Display/box/box"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 3.0
margin/right = 109.0
margin/bottom = 17.0
text = "Background Style"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BGMode" type="OptionButton" parent="frame/Tab/Display/box/box"]

rect/min_size = Vector2( 110, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 113.0
margin/top = 0.0
margin/right = 223.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Simple"
flat = false
align = 0
selected = 0
items = [ "Simple", null, false, 0, null, "Advanced", null, false, 1, null ]

[node name="BGBlur" type="CheckBox" parent="frame/Tab/Display/box"]

hint/tooltip = "Toggle the background blur effect. Disabling could improve performance, but will affect the background color"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 31.0
margin/right = 280.0
margin/bottom = 54.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
text = "Background Blur"
flat = false
align = 0

[node name="HSeparator1" type="HSeparator" parent="frame/Tab/Display/box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 58.0
margin/right = 280.0
margin/bottom = 61.0

[node name="box 3" type="HBoxContainer" parent="frame/Tab/Display/box"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 65.0
margin/right = 280.0
margin/bottom = 85.0
alignment = 0

[node name="Label" type="Label" parent="frame/Tab/Display/box/box 3"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 3.0
margin/right = 57.0
margin/bottom = 17.0
text = "GUI Tint:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="GUITint" type="ColorPickerButton" parent="frame/Tab/Display/box/box 3"]

hint/tooltip = "The tint of the game\'s interface. Avoid using Black."
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 61.0
margin/top = 0.0
margin/right = 129.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
color = Color( 0.968627, 0.921569, 0.72549, 1 )
edit_alpha = false

[node name="VSeparator" type="VSeparator" parent="frame/Tab/Display/box/box 3"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 133.0
margin/top = 0.0
margin/right = 136.0
margin/bottom = 20.0

[node name="Label 2" type="Label" parent="frame/Tab/Display/box/box 3"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 140.0
margin/top = 3.0
margin/right = 208.0
margin/bottom = 17.0
text = "GUI Lamp:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="GUILampTint" type="ColorPickerButton" parent="frame/Tab/Display/box/box 3"]

hint/tooltip = "The tint of the game interface lightsource."
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 212.0
margin/top = 0.0
margin/right = 280.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
color = Color( 0.494118, 0.717647, 0.552941, 1 )
edit_alpha = false

[node name="HSeparator3" type="HSeparator" parent="frame/Tab/Display/box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 89.0
margin/right = 280.0
margin/bottom = 92.0

[node name="box 2" type="HBoxContainer" parent="frame/Tab/Display/box"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 96.0
margin/right = 280.0
margin/bottom = 112.0
alignment = 0

[node name="Label" type="Label" parent="frame/Tab/Display/box/box 2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 1.0
margin/right = 26.0
margin/bottom = 15.0
text = "FOV"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="FOV" type="HSlider" parent="frame/Tab/Display/box/box 2"]

rect/min_size = Vector2( 200, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 30.0
margin/top = 0.0
margin/right = 230.0
margin/bottom = 16.0
range/min = 75.0
range/max = 120.0
range/step = 1.0
range/page = 0.0
range/value = 90.0
range/exp_edit = false
range/rounded = true
tick_count = 10
ticks_on_borders = true
focus_mode = 2

[node name="Value" type="Label" parent="frame/Tab/Display/box/box 2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 234.0
margin/top = 1.0
margin/right = 250.0
margin/bottom = 15.0
text = "90"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HSeparator2" type="HSeparator" parent="frame/Tab/Display/box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 116.0
margin/right = 280.0
margin/bottom = 119.0

[node name="Misc" type="ScrollContainer" parent="frame/Tab"]

editor/display_folded = true
visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 4.0
margin/top = 32.0
margin/right = 4.0
margin/bottom = 4.0
scroll/horizontal = true
scroll/vertical = true

[node name="box" type="VBoxContainer" parent="frame/Tab/Misc"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 193.0
margin/bottom = 99.0
alignment = 0

[node name="HSeparator1" type="HSeparator" parent="frame/Tab/Misc/box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 193.0
margin/bottom = 3.0

[node name="DevMode" type="CheckBox" parent="frame/Tab/Misc/box"]

hint/tooltip = "Toggle DEV MODE"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 7.0
margin/right = 193.0
margin/bottom = 30.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Developer Mode"
flat = false
align = 0

[node name="HSeparator" type="HSeparator" parent="frame/Tab/Misc/box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 34.0
margin/right = 193.0
margin/bottom = 37.0

[node name="Autosave" type="CheckBox" parent="frame/Tab/Misc/box"]

hint/tooltip = "Toggle whether the game should auto-save. Insurance against crashing games."
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 41.0
margin/right = 193.0
margin/bottom = 64.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
text = "Auto-Save\?"
flat = false
align = 0

[node name="box" type="HBoxContainer" parent="frame/Tab/Misc/box"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 68.0
margin/right = 193.0
margin/bottom = 92.0
alignment = 0

[node name="Label" type="Label" parent="frame/Tab/Misc/box/box"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 115.0
margin/bottom = 19.0
text = "Auto-Save every..."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AutoSaveTime" type="SpinBox" parent="frame/Tab/Misc/box/box"]

hint/tooltip = "Auto-save the game every X minutes"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 119.0
margin/top = 0.0
margin/right = 193.0
margin/bottom = 24.0
range/min = 1.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 10.0
range/exp_edit = false
range/rounded = true
editable = true
prefix = ""
suffix = "min."

[node name="HSeparator2" type="HSeparator" parent="frame/Tab/Misc/box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 96.0
margin/right = 193.0
margin/bottom = 99.0

[node name="About" type="VBoxContainer" parent="frame/Tab"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 32.0
margin/right = 4.0
margin/bottom = 4.0
alignment = 0

[node name="RichTextLabel" type="RichTextLabel" parent="frame/Tab/About"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 280.0
margin/bottom = 292.0
bbcode/enabled = true
bbcode/bbcode = "Made for the Itch.io S L O W  J A M\n[center][url=https://itch.io/jam/slow-game-jam]https://itch.io/jam/slow-game-jam[/url][/center]\n\n\n\n\n\n[img]res://icon.png[/img]Built in Godot Engine v2.1.2\n[center][url=https://godotengine.org/]https://godotengine.org/[/url][/center]"
visible_characters = -1

[node name="WindowResizer" parent="frame" instance=ExtResource( 2 )]

margin/top = 332.0
margin/right = 288.0
margin/bottom = 352.0

[connection signal="item_selected" from="frame/Tab/Display/box/box/BGMode" to="." method="_on_BGStyle_item_selected"]

[connection signal="toggled" from="frame/Tab/Display/box/BGBlur" to="." method="_on_BGBlur_toggled"]

[connection signal="color_changed" from="frame/Tab/Display/box/box 3/GUITint" to="." method="_on_GUITint_color_changed"]

[connection signal="color_changed" from="frame/Tab/Display/box/box 3/GUILampTint" to="." method="_on_GUILampTint_color_changed"]

[connection signal="toggled" from="frame/Tab/Misc/box/DevMode" to="." method="_on_DevMode_toggled"]

[connection signal="toggled" from="frame/Tab/Misc/box/Autosave" to="." method="_on_Autosave_toggled"]

[connection signal="value_changed" from="frame/Tab/Misc/box/box/AutoSaveTime" to="." method="_on_AutoSaveTime_value_changed"]

[connection signal="meta_clicked" from="frame/Tab/About/RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]


